--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forex Bot Dashboard</title>
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 2rem; background: #f5f5f5; }
-    h1 { font-size: 2rem; margin-bottom: 1rem; }
-    table { width: 100%; border-collapse: collapse; background: #fff; }
-    th, td { padding: 0.75rem; border: 1px solid #ccc; text-align: center; }
-    th { background: #333; color: #fff; }
-    caption { font-weight: bold; margin: 1rem 0; font-size: 1.2rem; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f0f0f0;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 10px;
+    }
+    table {
+      margin: 0 auto;
+      border-collapse: collapse;
+      width: 90%;
+    }
+    th, td {
+      padding: 10px;
+      border: 1px solid #ccc;
+    }
+    th {
+      background: #333;
+      color: white;
+    }
+    td {
+      background: #fff;
+    }
   </style>
 </head>
 <body>
   <h1>📈 Forex Bot Dashboard</h1>
-  <table id="metrics-table">
-    <caption>Live Trade Logs</caption>
+  <h3>Live Trade Logs</h3>
+  <table id="log-table">
     <thead>
       <tr>
         <th>Timestamp</th>
@@ -35,27 +52,33 @@
   </table>
 
   <script>
-    const sheetId = '1R5NFB4DWPWg2PnJC8AdABFn1ieWU1EkdaG69MK-Eths';
-    const gid = '0'; // Sheet tab ID for 'Metrics'
-    const csvUrl = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:csv&gid=${gid}`;
+    const SHEET_ID = "1R5NFB4DWPWg2PnJC8AdABFn1ieWU1EkdaG69MK-Eths";
+    const SHEET_GID = "0";
+    const API_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&gid=${SHEET_GID}`;
 
-    fetch(csvUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const data = Papa.parse(csv, { header: true }).data;
-        const tbody = document.querySelector("#metrics-table tbody");
+    function fetchSheetData() {
+      fetch(API_URL)
+        .then(res => res.text())
+        .then(text => {
+          const json = JSON.parse(text.substring(47).slice(0, -2));
+          const rows = json.table.rows;
+          const tableBody = document.querySelector("#log-table tbody");
+          tableBody.innerHTML = "";
 
-        data.forEach(row => {
-          const tr = document.createElement("tr");
-          ["Timestamp", "Pair", "Direction", "Entry", "SL", "TP", "Status", "PnL", "Balance"].forEach(key => {
-            const td = document.createElement("td");
-            td.textContent = row[key] || "";
-            tr.appendChild(td);
+          rows.forEach(row => {
+            const tr = document.createElement("tr");
+            row.c.forEach(cell => {
+              const td = document.createElement("td");
+              td.textContent = cell ? cell.v : "";
+              tr.appendChild(td);
+            });
+            tableBody.appendChild(tr);
           });
-          tbody.appendChild(tr);
         });
-      })
-      .catch(err => console.error("❌ Failed to load sheet:", err));
+    }
+
+    fetchSheetData();
+    setInterval(fetchSheetData, 5 * 60 * 1000); // Refresh every 5 mins
   </script>
 </body>
 </html>
