--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 </head>
 <body>
   <h1>📈 Forex Bot Dashboard</h1>
+  <a href="ember.html">
+  <button style="margin-bottom: 20px; padding: 10px 20px; font-size: 16px;">🔁 Switch to Project Ember</button>
+</a>
+
   <h3>Live Trade Logs</h3>
   <table id="log-table">
     <thead>
