--- a/ember.html
+++ b/ember.html
@@ -35,6 +35,10 @@
     </style>
 </head>
 <body>
+    <a href="index.html">
+  <button style="margin-bottom: 20px; padding: 10px 20px; font-size: 16px;">🔁 Switch to Inverse No Wick</button>
+</a>
+
     <h1>🔥 Project Ember Metrics</h1>
     <div id="table-container"></div>
 
